# PMD-plane-hand-detection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FrameObject.cpp  Makefile  PlaneDetector.cpp  README.md  Util.cpp  cmake_install.cmake  compiling_error.txt  mainPMD.cpp  xyz  xyz2
include/: DetectionParams.h  Detector.h  Visualizer.h  stdafx.h
src/: Detector.cpp  Hand.cpp  HandDetector.cpp  PlaneDetector.cpp  Visualizer.cpp  mainPMD.cpp
